Updating yml file

--- a/validate.ipynb
+++ b/validate.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[0;32mVALIDATION SUCCESSFUL\u001b[0m for research.\n"
+      "\u001b[0;32mVALIDATION SUCCESSFUL\u001b[0m\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     "if research_validation_failed:\n",
     "    print(f\"{RED}VALIDATION FAILED\")\n",
     "else:\n",
-    "    print(f\"{GREEN}VALIDATION SUCCESSFUL{NOCOLOR} for research.\")"
+    "    print(f\"{GREEN}VALIDATION SUCCESSFUL{NOCOLOR}\")"
    ]
   },
   {
