Updating the error message

--- a/validate.ipynb
+++ b/validate.ipynb
@@ -16,7 +16,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 2,
+         "execution_count": 10,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -34,7 +34,7 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 3,
+         "execution_count": 11,
          "metadata": {},
          "outputs": [],
          "source": [
@@ -58,17 +58,9 @@
       },
       {
          "cell_type": "code",
-         "execution_count": 6,
+         "execution_count": null,
          "metadata": {},
-         "outputs": [
-            {
-               "name": "stdout",
-               "output_type": "stream",
-               "text": [
-                  "\u001b[0;32mVALIDATION SUCCESSFUL\u001b[0m\n"
-               ]
-            }
-         ],
+         "outputs": [],
          "source": [
             "research_validation_failed = False\n",
             "for single_article_file in ALL_ARTICLES_DIR.glob(\"*.json\"):\n",
@@ -81,12 +73,12 @@
             "    except (json.JSONDecodeError) as e:\n",
             "        research_validation_failed = True\n",
             "        print(\n",
-            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e)}\"\n",
+            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e.message)}\"\n",
             "        )\n",
             "    except (jsonschema.ValidationError) as e:\n",
             "        research_validation_failed = True\n",
             "        print(\n",
-            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e)}\"\n",
+            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e.message)}\"\n",
             "        )\n",
             "\n",
             "if research_validation_failed:\n",
