Add a notebook to add new articles

--- a/new_article.ipynb
+++ b/new_article.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,38 +13,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The directory 'articles' already exists. Removing it.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('articles')"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "article_id = 'abhinav'\n",
-    "NEW_ARTICLE_DIR = Path('articles') / article_id\n",
-    "SAMPLE_DIR = Path('sample')\n",
+    "ARTICLE_ID = ''\n",
+    "NEW_ARTICLE_DIR = Path('articles') / ARTICLE_ID\n",
+    "SAMPLE_DIR = Path('sample')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not ARTICLE_ID:\n",
+    "    raise ValueError(\"Error: ARTICLE_ID cannot be empty.\")\n",
     "\n",
     "if NEW_ARTICLE_DIR.exists():\n",
-    "    print(f\"The directory '{NEW_ARTICLE_DIR}' already exists. Removing it.\")\n",
-    "    shutil.rmtree(NEW_ARTICLE_DIR)\n",
-    "\n",
+    "    raise FileExistsError(f\"Error: An article with ID '{ARTICLE_ID}' already exists in the directory.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "NEW_ARTICLE_DIR.mkdir(parents=True, exist_ok=True)\n",
-    "shutil.copytree(SAMPLE_DIR, NEW_ARTICLE_DIR, dirs_exist_ok=True)"
+    "shutil.copytree(SAMPLE_DIR, NEW_ARTICLE_DIR, dirs_exist_ok=True)\n",
+    "\n",
+    "NEW_ARTICLE_INFO_JSON = NEW_ARTICLE_DIR / 'info.json'\n",
+    "\n",
+    "with open(NEW_ARTICLE_INFO_JSON, 'r') as f_new:\n",
+    "    new_content = json.load(f_new)\n",
+    "\n",
+    "new_content['article_id'] = ARTICLE_ID\n",
+    "\n",
+    "with open(NEW_ARTICLE_INFO_JSON, 'w') as f_new:\n",
+    "    json.dump(new_content, f_new,indent=4)"
    ]
   }
  ],
