--- a/new_article.ipynb
+++ b/new_article.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ARTICLE_ID = ''\n",
+    "ARTICLE_ID = ''    #Fill this id.First two three words of your title and then author's first name\n",
     "NEW_ARTICLE_DIR = Path('articles') / ARTICLE_ID\n",
     "SAMPLE_DIR = Path('sample')"
    ]
