--- a/validate.ipynb
+++ b/validate.ipynb
@@ -58,39 +58,53 @@
       },
       {
          "cell_type": "code",
-         "execution_count": null,
+         "execution_count": 8,
          "metadata": {},
-         "outputs": [],
+         "outputs": [
+            {
+               "name": "stdout",
+               "output_type": "stream",
+               "text": [
+                  "\u001b[0;32mVALIDATION SUCCESSFUL\u001b[0m\n"
+               ]
+            }
+         ],
          "source": [
+            "import jsonschema\n",
+            "from collections import defaultdict\n",
+            "\n",
+            "custom_errors = {\n",
+            "    \"date\": \"Date must be in MM‑DD‑YYYY format (e.g. 01‑31‑2025).\",\n",
+            "}\n",
+            "\n",
+            "error_log: dict[str, list[str]] = defaultdict(list)\n",
+            "\n",
             "research_validation_failed = False\n",
-            "for single_article_file in ALL_ARTICLES_DIR.glob(\"*.json\"):\n",
-            "    with open(single_article_file) as fname_article:\n",
-            "        content = json.load(fname_article)\n",
+            "for single_article_file in ALL_ARTICLES_DIR.rglob(\"*.json\"):\n",
+            "    with open(single_article_file) as f:\n",
+            "        content = json.load(f)\n",
             "    try:\n",
             "        with open(ARTICLE_SCHEMA) as schema_f:\n",
             "            schema_data = json.load(schema_f)\n",
             "        jsonschema.validate(content, schema_data)\n",
             "    except (json.JSONDecodeError) as e:\n",
             "        research_validation_failed = True\n",
-            "        print(\n",
-            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e.message)}\"\n",
-            "        )\n",
-            "    except (jsonschema.ValidationError) as e:\n",
+            "        error_log[str(single_article_file)].append(f\"Invalid JSON: {e}\")\n",
+            "    except jsonschema.ValidationError as e:\n",
             "        research_validation_failed = True\n",
-            "        print(\n",
-            "            f\"Please recheck JSON file: {single_article_file} - Error: {str(e.message)}\"\n",
-            "        )\n",
+            "        field = list(e.path)[-1] if e.path else None\n",
             "\n",
+            "        msg = custom_errors.get(field, e.message)\n",
+            "\n",
+            "        error_log[str(single_article_file)].append(f\"{field!r}: {msg}\")\n",
             "if research_validation_failed:\n",
+            "    for fname, errs in error_log.items():\n",
+            "        for err in errs:\n",
+            "            print(f\"Please recheck JSON file: {fname} — Error: {err}\")\n",
             "    print(f\"{RED}VALIDATION FAILED\")\n",
             "else:\n",
-            "    print(f\"{GREEN}VALIDATION SUCCESSFUL{NOCOLOR}\")"
+            "    print(f\"{GREEN}VALIDATION SUCCESSFUL{NOCOLOR}\")\n"
          ]
-      },
-      {
-         "cell_type": "markdown",
-         "metadata": {},
-         "source": []
       }
    ],
    "metadata": {
